--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "delete:docs": "del docs",
-    "copy:dist": "copyfiles dist/heroes-app/* ./docs -f",
+    "copy:dist": "copyfiles dist/heroes-app/* ./docs -f"
   },
   "private": true,
   "dependencies": {
